--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ html,body{height:100%;margin:0;color:var(--ink);background:var(--bg);-webkit-fon
   position: relative;
   width: 100%;
   height: 80vh; /* 80% of the viewport height */
-  background: url('../images/school-bus-stop-w-kids.jpg') no-repeat center center/cover;
+  background: url('../images/school-bus-stop-w-kids_upscaled.png') no-repeat center center/cover;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -55,24 +55,24 @@ html,body{height:100%;margin:0;color:var(--ink);background:var(--bg);-webkit-fon
 .hero-content {
   position: relative;
   z-index: 2;
-  max-width: 80%;
+  max-width: 60%; /*80%*/
   opacity: 0; /* start hidden */
   animation: fadeInUp 1.2s ease-out forwards;
-  animation-delay: 0.3s; /* delay slightly after page load */
+  /* animation-delay: 0.3s; */
 }
 
 .hero-content h1 {
   font-size: 3rem;
   margin-bottom: 1rem;
   animation: fadeInUp 1.2s ease-out forwards;
-  animation-delay: 0.4s;
+  /*animation-delay: 0.4s;*/
 }
 
 .hero-content p {
   font-size: 1.25rem;
   margin-bottom: 2rem;
   animation: fadeInUp 1.2s ease-out forwards;
-  animation-delay: 0.6s;
+  /*animation-delay: 0.6s;*/
 }
 
 .hero-btn {
@@ -84,7 +84,7 @@ html,body{height:100%;margin:0;color:var(--ink);background:var(--bg);-webkit-fon
   text-decoration: none;
   transition: background-color 0.3s;
   animation: fadeInUp 1.2s ease-out forwards;
-  animation-delay: 0.8s;                          /*ADJUST TIMING*/
+  /* animation-delay: 0.8s;*/
 }
 
 .hero-btn:hover {
@@ -98,16 +98,11 @@ html,body{height:100%;margin:0;color:var(--ink);background:var(--bg);-webkit-fon
   vertical-align: middle;
 }
 
-
-/* features */
-/* .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:1.25rem;padding:2rem 0}
-.features article{background:#fbfbfb;padding:1rem;border-radius:8px} */
-
 /* Strengths Section */
 .strengths-section {
   text-align: center;
-  padding: 4rem 2rem;
-  background: #f7f8f9;
+  padding: 2rem 2rem; /*4rem 2rem*/
+  background: #F5F7FA;
 }
 
 .strengths-section h2 {
@@ -136,9 +131,9 @@ html,body{height:100%;margin:0;color:var(--ink);background:var(--bg);-webkit-fon
 }
 
 .strength1 { background: #1B3A5C; }
-.strength2 { background: #FFC107; }
+.strength2 { background: #4A7C9F; }
 .strength3 { background: #1B3A5C; }
-.strength4 { background: #FFC107; }
+.strength4 { background: #4A7C9F; }
 
 .strength-bubble h3 {
   margin-bottom: 1rem;
