--- a/css/technology.css
+++ b/css/technology.css
@@ -34,12 +34,12 @@ h1::after {
 /*        NAV / HEADER          */
 /* **************************** */
 .nav {
-  display: fixed;
+  display: flex;
   gap: 1rem;
   /*align-items: center; */
 }
 
-.nav{display:fixed;gap:1rem;align-items: center}
+.nav{display:flex;gap:1rem;align-items: center}
 .nav a{color:var(--ink);text-decoration:none;padding:0.25rem 0.5rem}
 .nav a:hover{color:var(--accent)}
 .nav-toggle{display:none;background:none;border:0;font-size:1.25rem}
@@ -253,7 +253,7 @@ h1::after {
 /*          TECH PAGE           */
 /* **************************** */
 /* Namespace under .tech-page so styles only affect this page */
-.tech-page { font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, Arial; padding-top: 100px;}
+.tech-page { font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, Arial;}
 
 /* Page header */
 .tech-header {
